--- a/index.html
+++ b/index.html
@@ -2,29 +2,21 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - 3D Perspective cards with depth [CSS]</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css'><link rel="stylesheet" href="./style.css">
+<title>ยิ้มหวาน By.Mix</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:url" content="https://yimhwanby-mix.github.io/Dogmsi/" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="ยิ้มหวาน By.mix" />
+<meta property="og:description" content="เหนียว เขียว สดดอกคัด100" />
+<meta property="og:image" content="https://sv1.picz.in.th/images/2023/04/09/mo2sII.jpg" />
+<meta property="og:locale" content="th_TH">
+<meta property="og:type" content="game mobile">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel='stylesheet' href='https://sv1.picz.in.th/images/2023/04/08/mlmb49.jpg'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css'>
+<link rel="stylesheet" href="./style.css">
 
 </head>
-	<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '738557191089196');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=738557191089196&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 <body>
 <!-- partial:index.partial.html -->
 <section>
@@ -32,11 +24,11 @@ src="https://www.facebook.com/tr?id=738557191089196&ev=PageView&noscript=1"
 		<div class="col-md-4 col-sm-6 col-xs-12">
 			<div class="card">
 				<div class="cover item-a">
-					<h1>Little<br>Bonsai</h1>
-					<span class="price">$79</span>
+					<h1>NYC<br>NEW YORK CITY</h1>
+					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">Add to cart</a>
-						<a href="#">View detail</a>
+						<a href="#">ชำระเงิน</a>
+						
 					</div>
 				</div>
 			</div>
@@ -44,10 +36,10 @@ src="https://www.facebook.com/tr?id=738557191089196&ev=PageView&noscript=1"
 		<div class="col-md-4 col-sm-6 col-xs-12">
 			<div class="card">
 				<div class="cover item-b">
-					<h1>Tropical<br>Leaf</h1>
-					<span class="price">$35</span>
+					<h1>BlUE<br>Cheese</h1>
+					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">Add to cart</a>
+						<a href="#">ชำระเงิน</a>
 					</div>
 				</div>
 			</div>
@@ -55,10 +47,10 @@ src="https://www.facebook.com/tr?id=738557191089196&ev=PageView&noscript=1"
 		<div class="col-md-4 col-sm-6 col-xs-12">
 			<div class="card">
 				<div class="cover item-c">
-					<h1>Marijuana<br>Chill</h1>
-					<span class="price">$155</span>
+					<h1>SUPPER<br>Wooman</h1>
+					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">Add to cart</a>
+						<a href="#">ชำระเงิน</a>
 					</div>
 				</div>
 			</div>
