--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<h1>NYC<br>NEW YORK CITY</h1>
 					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">ชำระเงิน</a>
+						<a href="https://m.me/102683252485272">ชำระเงิน</a>
 						
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 					<h1>BlUE<br>Cheese</h1>
 					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">ชำระเงิน</a>
+						<a href="https://m.me/102683252485272">ชำระเงิน</a>
 					</div>
 				</div>
 			</div>
@@ -50,7 +50,7 @@
 					<h1>SUPPER<br>Wooman</h1>
 					<span class="price">$10/G</span>
 					<div class="card-back">
-						<a href="#">ชำระเงิน</a>
+						<a href="https://m.me/102683252485272">ชำระเงิน</a>
 					</div>
 				</div>
 			</div>
